--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.14.2",
-    "aws-cdk": "2.147.3",
+    "aws-cdk": "^2.147.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.5"
   },
   "dependencies": {
+    "@aws-cdk/aws-lambda-python-alpha": "^2.147.3-alpha.0",
     "aws-cdk-lib": "2.147.3",
     "cdk-nag": "^2.28.156",
     "constructs": "^10.0.0",
