--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   },
   "dependencies": {
     "@aws-cdk/aws-lambda-python-alpha": "^2.147.3-alpha.0",
+    "@types/node-forge": "^1.3.11",
     "aws-cdk-lib": "2.147.3",
     "cdk-nag": "^2.28.156",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "node-forge": "^1.3.1",
+    "source-map-support": "^0.5.21",
+    "yaml": "^2.4.5"
   }
 }
