--- a/config/config-sample-all-external.yaml
+++ b/config/config-sample-all-external.yaml
@@ -23,8 +23,13 @@ Properties:
 
 DeploymentOptions:
   # mTLS Truststore certificate chain - generated if ""
-  mTlsTruststoreCertificatesChainFile: ""
+  mTlsTruststoreCertificatesChainFile: "LOCAL PATH TO TRUST CHAIN PEM FILE"
+  # Path to the IoT Core CA Certificate if provided or ""
+  iotCoreCaCertificatePath: "LOCAL PATH TO CA CERTIFICATE FOR IOT DEVICES"
+  # Path to the IoT Core CA Private Key if provided or ""
+  iotCoreCaPrivateKeyPath: ""
   # Generates Iot Core self-signed certificate and private key for signing CSR
+  # Ignored if iotCoreCaCertificatePath (above) is not ""
   generateIotCaCertificate: false
   # If 'true' IoT Core will be configured for JITP
-  configureJITP: false
+  configureJITP: true
