--- a/config/config-sample-all-external.yaml
+++ b/config/config-sample-all-external.yaml
@@ -2,8 +2,9 @@
 Properties:
   # EST Service
   apiCustomDomainName: "YOUR API DOMAIN NAME HERE"
-  apiCertificateArn: "YOUR API CERTIFICATE ARN from CERTIFICATE MANAGER  HERE"
- # EST mTLS server side
+  apiCertificateArn: "YOUR API CERTIFICATE ARN from CERTIFICATE MANAGER HERE"
+  apiOwnershipVerificationCertificateArn: "YOUR API OWNERSHIP VERIFICATION CERTIFICATE ARN from CERTIFICATE MANAGER HERE IF NECESSARY"
+  # EST mTLS server side
   estMtlsCaSecretsName: "estMtlsCaSecrets"
   estMtlsCaCertValidity: 10
   # EST mTLS client side
