--- a/package.json
+++ b/package.json
@@ -13,19 +13,17 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.14.2",
-    "aws-cdk": "^2.148.1",
+    "aws-cdk": "^2.151.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "~5.4.5"
+    "typescript": "~5.5.4"
   },
   "dependencies": {
-    "@aws-cdk/aws-lambda-python-alpha": "^2.147.3-alpha.0",
-    "@types/node-forge": "^1.3.11",
-    "aws-cdk-lib": "2.147.3",
-    "cdk-nag": "^2.28.156",
+    "@aws-cdk/aws-lambda-python-alpha": "^2.151.0-alpha.0",
+    "aws-cdk-lib": "^2.147.3",
+    "cdk-nag": "^2.28.175",
     "constructs": "^10.0.0",
-    "node-forge": "^1.3.1",
     "source-map-support": "^0.5.21",
     "yaml": "^2.4.5"
   }
