Excluded rule "NoUserAgent_HEADER" from WAF2 rule group because some device don't present it. Added config option to disable strict headers check to avoid blocking devices not compliant with headers requirements of RFC7030.

--- a/config/config-sample-all-external.yaml
+++ b/config/config-sample-all-external.yaml
@@ -4,6 +4,8 @@ Properties:
   apiCustomDomainName: "YOUR API DOMAIN NAME HERE"
   apiCertificateArn: "YOUR API CERTIFICATE ARN from CERTIFICATE MANAGER HERE"
   apiOwnershipVerificationCertificateArn: "YOUR API OWNERSHIP VERIFICATION CERTIFICATE ARN from CERTIFICATE MANAGER HERE IF NECESSARY"
+  # Enable or disable caller Headers
+  apiStrictHeadersCheck: true
   # EST mTLS server side
   estMtlsCaSecretsName: "estMtlsCaSecrets"
   estMtlsCaCertValidity: 10
