Add configurable timeout to testing

--- a/test/test_config.yaml
+++ b/test/test_config.yaml
@@ -11,3 +11,5 @@ mqtt_topic: "messages/<thing_name>/hello"
 # Set to true to save IoT Core certificates and keys generated during the test to disk in
 # <current_dir>/temp/
 save_iot_creds_to_disk: true
+# Timeout in seconds for http requests
+http_timeout: 20
