Added option to use the certificate CN as Thing Name for tests. Small improvement of IoT CA registration Lambda to allow re-registration of an existing CA in Secrets.

--- a/test/test_config.yaml
+++ b/test/test_config.yaml
@@ -15,3 +15,5 @@ save_test_data: true
 http_timeout: 20
 # CSR key size
 csr_key_size: 4096
+# Use Certificate CN as Thing Name if True otherwise use a self-generated thing name (normal case)
+connect_with_cn_for_thing_name: true
