--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 boto3 == 1.34.*
 cryptography == 43.*
+# coming with boto3
+botocore
+awscrt
 # For running tests only
-awsiotsdk
-requests
-pyyaml
+awsiotsdk~=1.22.0
+requests~=2.32.3
+pyyaml~=6.0.2
+urllib3
 pip-system-certs # Required on Mas OS and venv to access the system Root Certificates
+# Code audit
 bandit # Required for code quality & security assessment
 pip-audit # Required for code quality & security assessment
