--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "20.14.2",
+    "@types/node": "^22.8.6",
     "aws-cdk": "^2.151.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "~5.5.4"
+    "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@aws-cdk/aws-lambda-python-alpha": "^2.151.0-alpha.0",
+    "@aws-cdk/aws-lambda-python-alpha": "^2.165.0-alpha.0",
     "aws-cdk-lib": "^2.147.3",
     "cdk-nag": "^2.28.175",
     "constructs": "^10.0.0",
